--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@
       <!--End Middle-->
 
     <!--jquary min js-->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery.min.js"></script> -->
+    <script   src="https://code.jquery.com/jquery-1.9.1.min.js"   integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ="   crossorigin="anonymous"></script>
     <!--for custom jquary-->
     <script src="js/custom.js"></script>
 
