--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
       <!-- Main style-->
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="" href="css/style.css">
         <!-- Main style-->
-      <link rel="stylesheet" type="text/css" href="css/mediaQuery.css">
+      <link rel="stylesheet" type="" href="css/mediaQuery.css">
 
 
       <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -219,7 +219,7 @@
             <div class="row education" style="">
                 <div class="col-xs-12 col-md-3" >
                     <div style="margin-top:50px; font-size: 1.2em;" class="circle">In Progress</div>
-                    <div style="margin-left:50px" class="vr">&nbsp;</div>
+                    <div style="margin-left:50px" class="vr">" "</div>
                 </div>
 
                 <div class="col-xs-12 col-md-9" >
@@ -235,7 +235,7 @@
             <div class="row education" style="">
                 <div class="col-xs-12 col-md-3" >
                     <div style="margin-top:50px; font-size: 1.2em" class="circle">February, 2011</div>
-                    <div style="margin-left:50px" class="vr">&nbsp;</div>
+                    <div style="margin-left:50px" class="vr">" "</div>
                 </div>
 
                 <div class="col-xs-12 col-md-9" >
@@ -252,7 +252,7 @@
             <div class="row education" style="">
                 <div class="col-xs-12 col-md-3" >
                     <div style="margin-top:50px; font-size: 1.2em" class="circle">April, 2006</div>
-                    <div style="margin-left:50px" class="vr">&nbsp;</div>
+                    <div style="margin-left:50px" class="vr">" "</div>
                 </div>
 
                 <div class="col-xs-12 col-md-9" >
@@ -284,7 +284,7 @@
             <div class="row experiance" style="">
                 <div class="col-xs-12 col-md-3" >
                     <div style="margin-top:50px; font-size: 1.2em" class="circle">2016 February</div>
-                   <div style="margin-left:50px" class="vr">&nbsp;</div>
+                   <div style="margin-left:50px" class="vr">" "</div>
                 </div>
 
                 <div class="col-xs-12 col-md-9" >
@@ -300,7 +300,7 @@
               <div class="row experiance" style="">
                 <div class="col-xs-12 col-md-3" >
                     <div style="margin-top:50px; font-size: 1.2em" class="circle">2015 June</div>
-                    <div style="margin-left:50px" class="vr">&nbsp;</div>
+                    <div style="margin-left:50px" class="vr">" "</div>
                 </div>
 
                 <div class="col-xs-12 col-md-9" >
@@ -317,7 +317,7 @@
               <div class="row experiance" style="">
                 <div class="col-xs-12 col-md-3" >
                     <div style="margin-top:50px; font-size: 1.2em" class="circle">2014 November</div>
-                    <div style="margin-left:50px" class="vr">&nbsp;</div>
+                    <div style="margin-left:50px" class="vr">" "</div>
                 </div>
 
                 <div class="col-xs-12 col-md-9" >
@@ -385,9 +385,9 @@
                       <p>Tel: <strong>07707497818</strong></p>
                       <p>Email: <strong>emailtoasha.wjk@gmail.com</strong></p>
                       <p>Address: </p>
-                      <p><strong>No 227 Kingsway,</strong></p>
-                      <p><strong>Hereford.</strong></p>
-                      <p><strong>HR1 1HE</strong></p>
+                      <p><strong>No 49, Tidenham Gardens,</strong></p>
+                      <p><strong>Croydon.</strong></p>
+                      <p><strong>CR0 5UT</strong></p>
                 </div>
 
                  <div class="col-xs-12 col-md-8" id="" >
@@ -489,8 +489,8 @@
       </script>
 
     <!--for skill chat jquary-->
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/jquery.easypiechart.js"></script>
+      <script src="js/jquery.easing.min.js"></script>
+      <script src="js/jquery.easypiechart.js"></script>
 
     </body>
 </html>
